<resources>
    <string name="app_name">Infinite Rolls</string>
    <string name="bienvenido">¡Bienvenido a Infinite Rolls!</string>
    <string name="carrito">Carrito</string>
    <string name="idioma">Idioma</string>
    <string name="titulo_string">¡Bienvenido a Infinite Rolls!</string>
    <string name="resumen_boton_descripcion">Resumen</string>
    <string name="idioma_boton_descripcion">Selector de Idioma</string>
    <string name="sushi">Sushi</string>
    <string name="wok">Wok</string>
    <string name="temaki">Temaki</string>
    <string name="aperitivo">Aperitivo</string>
    <string name="bebida">Bebida</string>
    <string name="vinos">Vinos</string>
    <string name="postre">Postre</string>
    <string name="sopas">Sopas</string>
    <string name="boton_flotante_carrito_descripcion">Carrito</string>
    <string name="nigiris">Nigiri</string>
    <string name="detalles_del_pedido">Detalles del Pedido</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="nombre_del_plato">Nombre del Plato</string>
    <string name="cantidad_1">Cantidad: 1</string>
    <string name="subtotal_0_00">Subtotal: $0.00</string>
    <string name="nombre_del_plato_item">Nombre del Plato</string>
    <string name="descripci_n_del_plato">Descripción del plato</string>
    <string name="precio">Precio</string>
    <string name="a_adir">Añadir</string>
    <string name="resumen_del_pedido">Resumen del Pedido</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="confirmar">Confirmar</string>
    <string name="rechazar_2">Rechazar</string>
    <string name="pedidoaceptado">Pedido ha sido aceptado</string>
    <string name="pedidorechazado">Pedido ha sido cancelado</string>
    <string name="numero_mesa">Mesa: %d</string>
    <string name="detalle_plato">Descripción del Plato</string>
    <string name="titulo_detalle_plato">Título del Plato</string>
    <string name="agregar_plato">Agregar Plato</string>
    <string name="gesti_n_de_platos">Gestión de Platos</string>
    <string name="eliminar_plato">Eliminar Plato</string>
    <string name="mesa">Mesa:</string>
    <string name="precio_dialogo">Precio</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="nombre_del_plato_dialogo">Nombre del plato</string>
    <string name="descripci_n_dialogo">Descripción</string>
    <string name="detalles_adicionales">Detalles adicionales</string>
</resources>
