<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tvTituloCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gesti_n_de_platos"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingBottom="20dp" />

    <Button
        android:id="@+id/btnAgregarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_plato" />

    <Button
        android:id="@+id/btnEliminarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_plato"
        android:layout_marginTop="16dp" />

    <!-- Agregar RecyclerView aquí -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlatos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>
