<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumen_del_pedido"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp"/>

    <!-- Lista de productos en el carrito -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCarrito"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"/>

    <!-- Texto para mostrar el total -->
    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_0_00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"/>

    <!-- Botones Confirmar y Rechazar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar"
            android:backgroundTint="@color/blue_light"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnRechazar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rechazar_2"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mesa: #"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>
